# rust-async-disk-api

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-db.yml  docker-compose.yml
.sqlx/: query-12a7b89b16684c6ee8bba2f02af78631bccede5779aefa7d97b229843c4a5220.json  query-843923b9a0257cf80f1dff554e7dc8fdfc05f489328e8376513124dfb42996e3.json  query-e3d7a6852d05abf37d13fc6d37e43aa065ca6dcae168bcaad996298a4d137b2f.json  query-fc140ce811991caef0f1384df464bad12403833b9c768957399770c4c6b492ec.json
bun-tests/: README.md  bun.lockb  index.ts  package.json
load-test/user-files/simulations/rinhabackend/: RinhaBackendCrebitosSimulation.scala
src/: bank_statement.rs  db.rs  extract.rs  logging.rs  main.rs  responses.rs  static_responses.rs  transaction.rs  user.rs
submission/: README.md
