[package]
name = "rust-async-disk-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.34"
serde = { version= "1.0.196", features= ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.34.0", features = ["full"] }
dotenvy = "0.15.7"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio", "chrono"] }
bincode = "1.3.3"
